books-catalog-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-catalog-service
spec:
  type: ClusterIP
  selector:
    app: books-catalog
  ports:
    - port: 80
      targetPort: 8000
